--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta charset="utf-8">
   <style>
     a{
-      color:red;
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align:center;
     }
   </style>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" style="color:red;text-decoration:underline">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
