--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <title>WEB1 - WELCOME</title>
   <meta charset="utf-8">
   <style>
+    body{
+      margin: 0;
+    }
+    #active {
+      color:red;
+    }
     a{
       color:black;
       text-decoration: none;
@@ -11,20 +17,37 @@
     h1 {
       font-size:45px;
       text-align:center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px:
+    }
+    ol{
+      border-right: 1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    #grid{
+      display: grid;
+      grid-template-columns: 150px 1fr;
     }
   </style>
 </head>
 <body>
-  <h1><a href="index.html" style="color:red;text-decoration:underline">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>WEB이란 무엇인가?</h2>
-  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/mAKsZ26SabQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-  <p><a href="https://www.w3.org/TR/html51/introduction.html#design-notes" target="_blank">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
-  <img src="sexy3.jpg" width="100%">
+  <h1><a href="index.html" id="active">꾸준이진리</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" >HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
+    <div>
+        <h2>운동자극영상</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bUXegB_IULQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p><a href="https://www.w3.org/TR/html51/introduction.html#design-notes" target="_blank">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+     </div>
+ </div>
+  <img src="s.jpg" width="100%">
   <p>Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</P>
 </body>
 </html>
