--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
   <h1><a href="index.html" id="active">꾸준이진리</a></h1>
   <div id="grid">
     <ol>
-      <li><a href="1.html" >HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="1.html">가슴</a></li>
+      <li><a href="2.html">어깨</a></li>
+      <li><a href="3.html">팔</a></li>
+      <li><a href="4.html">등</a></li>
+      <li><a href="5.html">하체</a></li>
     </ol>
     <div>
         <h2>운동자극영상</h2>
@@ -48,6 +50,7 @@
      </div>
  </div>
   <img src="s.jpg" width="100%">
+  <img src="coding.jpg" width="100%">
   <p>Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</P>
 </body>
 </html>
