--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       color:red;
     }
     a{
-      color:black;
+      color:blue;
       text-decoration: none;
     }
     h1 {
@@ -35,6 +35,14 @@
 </head>
 <body>
   <h1><a href="index.html" id="active">꾸준이진리</a></h1>
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor = 'black';
+  document.querySelector('body').style.color = 'white';
+">
+<input type="button" value="day" onclick="
+  document.querySelector('body').style.backgroundColor = 'white';
+  document.querySelector('body').style.color = 'black';
+">
   <div id="grid">
     <ol>
       <li><a href="1.html">가슴</a></li>
