--- a/index.html
+++ b/index.html
@@ -35,14 +35,19 @@
 </head>
 <body>
   <h1><a href="index.html" id="active">꾸준이진리</a></h1>
-  <input type="button" value="night" onclick="
-  document.querySelector('body').style.backgroundColor = 'black';
-  document.querySelector('body').style.color = 'white';
+  <input id="night_day" type="button" value="night" onclick="
+   if(document.querySelector('#night_day').value === 'night'){
+     document.querySelector('body').style.backgroundColor = 'black';
+     document.querySelector('body').style.color = 'white';
+     document.querySelector('#night_day').value = 'day';
+
+    } else {
+     document.querySelector('body').style.backgroundColor = 'white';
+     document.querySelector('body').style.color = 'black';
+     document.querySelector('#night_day').value = 'night';
+    }
 ">
-<input type="button" value="day" onclick="
-  document.querySelector('body').style.backgroundColor = 'white';
-  document.querySelector('body').style.color = 'black';
-">
+
   <div id="grid">
     <ol>
       <li><a href="1.html">가슴</a></li>
