--- a/1.html
+++ b/1.html
@@ -1,62 +1,10 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - HTML</title>
-  <meta charset="utf-8">
-  <style>
-    body{
-      margin:0;
-    }
-    a {
-      color:black;
-      text-decoration: none;
-    }
-    h1 {
-      font-size:45px;
-      text-align: center;
-      border-bottom:1px solid gray;
-      margin:0;
-      padding:20px;
-    }
-    ol{
-      border-right:1px solid gray;
-      width:100px;
-      margin:0;
-      padding:20px;
-    }
-    #grid{
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-    #grid ol{
-      padding-left:33px;
-    }
-    #grid #article{
-      padding-left:25px;
-    }
-    @media(max-width:800px){
-      #grid{
-        display: block;
-      }
-      ol{
-        border-right:none;
-      }
-      h1 {
-        border-bottom:none;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <div id="article">
-   <h2>HTML</h2>
-   <p><a href="https://www.w3.org/TR/html51/introduction.html#design-notes" target="_blank">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
- </div>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  </body>
 </html>
